--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -557,7 +557,7 @@ footer .footer-custom-content {
 }
 
 .blog-tags a {
-  color: {{ site.text-col | default: "#008AFF" }};
+  color: {{ site.text-col | default: "#404040" }};
   text-decoration: none;
   padding: 0 0.3125rem;
   opacity: 0.8;
@@ -567,7 +567,7 @@ footer .footer-custom-content {
 
 .blog-tags a:hover {
   opacity: 1;
-  color: {{ site.text-col | default: "#008AFF" }};
+  color: {{ site.text-col | default: "#404040" }};
   border-color: {{ site.text-col | default: "#404040" }};
 }
 
