--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,11 @@
 layout: base
 ---
 
-<div class="intro-header">
+<div class="intro-header"></div>
+
 {% if page.use_math %}
   {% include mathjax_support.html %}
 {% endif %}
-</div>
 
 <div role="main" class="{% if page.full-width %} container-fluid {% else %} container-md {% endif %}">
   {% if page.before-content %}
