--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,13 @@
 layout: base
 ---
 
-<div class="intro-header"></div>
+<head>
+    {% if page.use_math %}
+        {% include mathjax_support.html %}
+    {% endif %}
+</head>
 
-{% if page.use_math %}
-  {% include mathjax_support.html %}
-{% endif %}
+<div class="intro-header"></div>
 
 <div role="main" class="{% if page.full-width %} container-fluid {% else %} container-md {% endif %}">
   {% if page.before-content %}
