--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
+  {% if page.use_math %}
+    {% include mathjax_support.html %}
+  {% endif %}
 
   {% capture title %}
     {%- if page.share-title -%}
